--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Python package
 on:
 	push:
-		branches: [ "main" ]
-	pull_request:
-		branches: [ "main" ]
+		branches:
+			- main
 jobs:
 	build:
 		runs-on: ubuntu-latest
